--- a/README.org
+++ b/README.org
@@ -24,8 +24,12 @@ working with R code.  Specifically it implements a window setup as follows:
 --------------------                     
 
 I use the main window for editing code and sending it to the inferior R
-process.  RE-Builder is a useful tool in Emacs for building regular
-expressions.  Devoting a window to the inferior R process is a good way to view
+process.  
+
+RE-Builder is a useful tool in Emacs for building regular
+expressions.  
+
+Devoting a window to the inferior R process is a good way to view
 the output of code sent to it. 
 
 
